index.less
html {
  font-family: sans-serif;
}

body {
  margin: 0px;
}

.button {
  -webkit-user-select: none;
  cursor: pointer;
  text-align: center;
  padding: 10px;
}

.purple {
  background: #BDBCED;
}

.header {
  position: fixed;
  top: 0px;
  right: 0px;
  z-index: 20;
  .login {
    margin-top: 20px;
    margin-right: 20px;
    .login-button {
      text-decoration: underline;
      cursor: pointer;
      text-align: right;
    }
    input {
      display: inline;
    }
    .error-message {
      margin-top: 10px;
    }
  }
}

.submit-track-wrapper {
  z-index: 10;

  @media (min-width: 1200px) {
    position: fixed;
    width: 50%;
  }

  .submit-track {
    @media (min-width: 1200px) {
      width: 600px;
    }
    margin: 0px auto;
    padding-top: 20px;
    background: white;
    border-bottom: 1px solid #eee;

    .submit-track-input {
      display: flex;
      .submit-track-button {
        .button;
        flex: 0 0 100px;
        background: #B5D2EA;
      }

      input {
        font: inherit;
        width: 100%;
        padding-left: 10px;
        &:focus {
          outline: none;
        }
      }
    }

    .turn-indicator {
      font-size: 90%;
      padding: 10px;
    } 
  }

}

.track-list-wrapper {
  padding: 100px 0px;

  @media (min-width: 1200px) {
    width: 50%;
  }

  .track-list {
    font-family: monospace;
    color: black;
    margin: 0px auto;

    @media (min-width: 1200px) {
      width: 600px;
    }

    .track {
      position: relative;
      display: flex;
      align-items: center;
      border-bottom: 1px solid #aaa;
      .button;
      .track-thumbnail {
        
      }
      .track-title {
        padding: 0px 30px;
      }
      .track-color {
        position: absolute;
        top: 0px;
        bottom: 0px;
        right: 0px;
        width: 20px;
      }
    } 
  }

}

.video-and-chat-wrapper {
  position: relative;
  display: flex;
  flex-direction: column;
  
  @media (min-width: 1200px) {
    position: fixed;
    top: 100px;
    right: 0px;
    width: 50%;
  }

  .video-and-chat {
    margin: 0px auto;
    width: 100%;

    @media (min-width: 1200px) {
      width: 640px;
    }

    .video {

      .no-video {
        border: 1px dashed #aaa;
        color: #aaa;
        display: flex;
        align-items: center;
        justify-content: center;
        min-height: 390px;
        .arrow {
          font-size: 40px;
        }
        .helper-text {
          font-size: 20px;
        }
      }

      #video-player {
        width: 100%;
      }
    }
  }

  .participant-list {
    padding: 10px;
    .participant {
      display: flex;
      align-items: center;
      .player-color {
        width: 12px;
        height: 12px;
        border-radius: 10px;
        margin-right: 5px;
      }
    }
  }
  
}

